--- a/frontend/src/app/provider/provider-layout/provider-layout.component.html
+++ b/frontend/src/app/provider/provider-layout/provider-layout.component.html
@@ -70,6 +70,7 @@
       </ion-buttons>
       <ion-title class="page-title">{{ pageTitle }}</ion-title>
       <ion-buttons slot="end">
+        <app-notification-button></app-notification-button>
         <ion-button (click)="logout()" class="logout-button">
           <ion-icon name="log-out"></ion-icon>
         </ion-button>
