--- a/frontend/src/app/client/client-layout/client-layout.component.html
+++ b/frontend/src/app/client/client-layout/client-layout.component.html
@@ -72,10 +72,7 @@
       </ion-buttons>
       <ion-title class="page-title">{{ pageTitle }}</ion-title>
       <ion-buttons slot="end">
-        <ion-button class="notification-button">
-          <ion-icon name="notifications-outline"></ion-icon>
-          <ion-badge color="danger" class="notification-badge">3</ion-badge>
-        </ion-button>
+        <app-notification-button></app-notification-button>
         <ion-button (click)="logout()" class="logout-button">
           <ion-icon name="log-out"></ion-icon>
         </ion-button>
