--- a/frontend/src/app/client/pets/pet-detail/pet-detail.page.html
+++ b/frontend/src/app/client/pets/pet-detail/pet-detail.page.html
@@ -20,7 +20,7 @@
       <div class="form-fields">
         <ion-item class="form-item">
           <ion-label position="floating">Nom</ion-label>
-          <ion-input formControlName="nom" type="text" class="custom-input" placeholder="Nom de votre animal"></ion-input>
+          <ion-input formControlName="nom" type="text" class="custom-input"></ion-input>
           <ion-note slot="error" *ngIf="petForm.get('nom')?.invalid && petForm.get('nom')?.touched">
             Le nom est requis
           </ion-note>
@@ -28,7 +28,7 @@
 
         <ion-item class="form-item">
           <ion-label position="floating">Type d'animal</ion-label>
-          <ion-select formControlName="type" interface="action-sheet" cancelText="Annuler" placeholder="Sélectionnez un type">
+          <ion-select formControlName="type" interface="action-sheet" cancelText="Annuler">
             <ion-select-option *ngFor="let type of petTypes" [value]="type">{{ type }}</ion-select-option>
           </ion-select>
           <ion-note slot="error" *ngIf="petForm.get('type')?.invalid && petForm.get('type')?.touched">
@@ -38,7 +38,7 @@
 
         <ion-item class="form-item">
           <ion-label position="floating">Race</ion-label>
-          <ion-select formControlName="race" interface="action-sheet" cancelText="Annuler" [disabled]="!selectedType" placeholder="Sélectionnez une race">
+          <ion-select formControlName="race" interface="action-sheet" cancelText="Annuler" [disabled]="!selectedType">
             <ion-select-option *ngFor="let race of filteredRaces" [value]="race">{{ race }}</ion-select-option>
           </ion-select>
           <ion-note slot="error" *ngIf="petForm.get('race')?.invalid && petForm.get('race')?.touched">
@@ -48,7 +48,7 @@
 
         <ion-item class="form-item">
           <ion-label position="floating">Âge (années)</ion-label>
-          <ion-input formControlName="age" class="custom-input" type="number" min="0" placeholder="Âge de votre animal"></ion-input>
+          <ion-input formControlName="age" class="custom-input" type="number" min="0"></ion-input>
           <ion-note slot="error" *ngIf="petForm.get('age')?.invalid && petForm.get('age')?.touched">
             L'âge est requis et doit être un nombre positif
           </ion-note>
@@ -104,17 +104,17 @@
           
           <ion-item class="form-item">
             <ion-label position="floating">Nom du vaccin</ion-label>
-            <ion-input formControlName="nomVaccin" type="text" class="custom-input" placeholder="Ex: Rage, Typhus..."></ion-input>
+            <ion-input formControlName="nomVaccin" type="text" class="custom-input"></ion-input>
           </ion-item>
           
           <ion-item class="form-item">
             <ion-label position="floating">Date de vaccination</ion-label>
-            <ion-input class="custom-input" class="custom-input" formControlName="dateVaccination" type="date"></ion-input>
+            <ion-input class="custom-input" formControlName="dateVaccination" type="date"></ion-input>
           </ion-item>
           
           <ion-item class="form-item">
             <ion-label position="floating">Vétérinaire</ion-label>
-            <ion-input formControlName="veterinaire" class="custom-input" type="text" placeholder="Nom du vétérinaire"></ion-input>
+            <ion-input formControlName="veterinaire" class="custom-input" type="text"></ion-input>
           </ion-item>
         </div>
       </div>
