--- a/frontend/src/app/client/services/services.page.scss
+++ b/frontend/src/app/client/services/services.page.scss
@@ -127,3 +127,11 @@
   color: #6c757d;
   margin: 0;
 }
+.form-item[_ngcontent-ng-c190317522] {
+    --background: #f8f9ff;
+    --border-radius: 12px;
+    --padding-start: 12px;
+    --padding-end: 12px;
+    margin-bottom: 16px;
+    --color: #6b6b6b;
+}
