--- a/frontend/src/app/client/chatbot/chatbot.component.scss
+++ b/frontend/src/app/client/chatbot/chatbot.component.scss
@@ -202,3 +202,15 @@
     bottom: 80px;
   }
 }
+.chatbot-input ion-input{
+    --padding-start: 16px;
+    --padding-end: 16px;
+    --padding-top: 10px;
+    --padding-bottom: 10px;
+    --background: #f1f3f4;
+    --border-radius: 24px;
+    --placeholder-color: #666;
+    --placeholder-opacity: 0.8;
+    font-size: 14px;
+    color: black;
+}
